Bug 364953 - Breeze and Breeze Light themes are the same but listed twice
Summary: Breeze and Breeze Light themes are the same but listed twice
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.6.95
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Development Mailing List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2016-07-01 03:35 UTC by Jeff Bai
Modified: 2019-12-15 21:12 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
kde: Usability?


Attachments
Breeze and Breeze Light (108.13 KB, image/png)
2016-07-01 03:36 UTC, Jeff Bai
Details
example for new Breeze multicolour image (40.49 KB, image/png)
2016-07-02 09:43 UTC, Jens Reuterberg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeff Bai 2016-07-01 03:35:45 UTC
In workspace themes > desktop themes, there are two themes, namely "Breeze" and "Breeze Light" listed in the panel. But after swapping between these two themes, I found that they are essentially the same themes (aren't they?).

I have attached a screenshot to the issue down below.

Reproducible: Always
Comment 1 Jeff Bai 2016-07-01 03:36:08 UTC
Created attachment 99777 [details]
Breeze and Breeze Light
Comment 2 Kai Uwe Broulik 2016-07-01 06:56:28 UTC
Breeze follows your system color scheme, Breeze Light does not and is always tinted blue. Not sure how we could communicate that in the UI.
Comment 3 Jens Reuterberg 2016-07-02 09:28:47 UTC
"Breeze Light", "Breeze Dark" and "Breeze" should be the naming. As for image to represent each differently I think it wont be that difficult - we could add the 5.4 wallpaper or something in the background instead of just light grey colour to represent "any colour you like"?
Comment 4 Jens Reuterberg 2016-07-02 09:43:24 UTC
Created attachment 99798 [details]
example for new Breeze multicolour image
Comment 5 Thomas Pfeiffer 2016-07-03 22:25:36 UTC
Hm, or should maybe call Breeze "Breeze (use system colors)" or Breeze (adaptive)" or something?
Comment 6 Filip Fila 2019-12-15 21:12:23 UTC
Git commit 3245c6bc9b7719c5fdad17ac70c49c12a102d75a by Filip Fila.
Committed on 15/12/2019 at 21:12.
Pushed by filipf into branch 'master'.

[Plasma Style KCM] Add a color-wheel sign denoting the theme supports the system color scheme

Summary:
The discoverability of the system color scheme awareness feature of some Plasma themes right now is very poor.

In addition to that the previews for Breeze and Breeze Light look identical when using the default color scheme.

To fix this we add a little color wheel icon in the top right corner of the theme preview that only shows up if the theme supports this.

Credits go to @broulik for most of the code, I just positioned the icon.

Test Plan:
Depends on: D25999

{F7818015}

Doesn't get messed up with scaling either.

Reviewers: #plasma, #vdg, ngraham

Reviewed By: #vdg, ngraham

Subscribers: ngraham, broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D25785

M  +4    -0    kcms/desktoptheme/kcm.cpp
M  +1    -0    kcms/desktoptheme/kcm.h
M  +11   -5    kcms/desktoptheme/package/contents/ui/ThemePreview.qml
M  +1    -0    kcms/desktoptheme/package/contents/ui/main.qml

https://commits.kde.org/plasma-desktop/3245c6bc9b7719c5fdad17ac70c49c12a102d75a