kcms/desktoptheme/package/contents/ui/ThemePreview.qml
@@ -17,6 +17,7 @@
 */
 import QtQuick 2.4
 import QtQuick.Layouts 1.1
+import QtQuick.Controls 2.5 as QQC2
 import org.kde.plasma.core 2.0 as PlasmaCore
 import org.kde.kirigami 2.4 as Kirigami
 import org.kde.plasma.components 2.0 as PlasmaComponents
@@ -52,6 +53,7 @@ Item {
 
     RowLayout {
         id: contents
+        spacing: 0
         anchors {
             fill: parent
             topMargin: background.generalMargin
@@ -84,16 +86,13 @@ Item {
             }
         }
 
-        Item {
-            Layout.fillWidth: true
-        }
-
         // Analog clock
         Item {
             id: clock
             Layout.fillHeight: true
+            Layout.fillWidth: true
             Layout.preferredWidth: height
-
+            Layout.alignment: Qt.AlignHCenter
             property int hours: 9
             property int minutes: 5
 
@@ -176,6 +175,13 @@ Item {
                 width: naturalSize.width * clock.svgScale
                 height: naturalSize.height * clock.svgScale
             }
+        }
+        Kirigami.Icon {
+            visible: model.followsSystemColors
+            source: "color-profile"
+            width: Kirigami.Units.iconSizes.smallMedium
+            height: width
+            Layout.alignment: Qt.AlignRight && Qt.AlignTop
         }
     }
 
